--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+    <div class="container" style="padding-top: 60px; padding-bottom: 60px">
+      <%= yield %>
+    </div>
+    <p></p>
+    <!-- 12345678 -->
+    <%= render 'layouts/footer' %>
   </body>
 </html>
