Back to use bootstrap3, at lease, it works without error.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,26 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Shop", '#', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-left">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Kids</a></li>
+            <li><a href="#">New-ins</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Saved</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Help & Support</a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <!--
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", static_pages_about_url %></li>
+        -->
         <li><a href="#"><span class="glyphicon glyphicon-folder-close"></span></a></li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
